--- a/ChatBotApiV2/appsettings.json
+++ b/ChatBotApiV2/appsettings.json
@@ -5,5 +5,21 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Conexion": "${CONNECTION_STRING}"
+  },
+  "JwtSettings": {
+    "SecretKey": "${JWT_SECRET_KEY}",
+    "Issuer": "${JWT_ISSUER}",
+    "Audience": "${JWT_AUDIENCE}",
+    "ExpirationMinutes": "720"
+  },
+  "Security": {
+    "PasswordSalt": "${PASSWORD_SALT}"
+  },
+  "Ollama": {
+    "BaseUrl": "${BASE_URL_OLLAMA}", //agregar /api al final de la url
+    "DefaultModel": "{$DEFAULT_MODEL"
+  },
   "AllowedHosts": "*"
 }
