--- a/ChatBotApiV2/ChatBotApiV2.csproj
+++ b/ChatBotApiV2/ChatBotApiV2.csproj
@@ -7,7 +7,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ClbDatChatbot\ClbDatChatbot.csproj" />
+    <ProjectReference Include="..\ClbModChatbot\ClbModChatbot.csproj" />
+    <ProjectReference Include="..\ClbNegChatbot\ClbNegChatbot.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EditorConfigFiles Remove="C:\Projects\ChatBotProject\ChatBotApiV2\ChatBotApiV2\.editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="C:\Projects\ChatBotProject\ChatBotApiV2\ChatBotApiV2\.editorconfig" />
   </ItemGroup>
 
 </Project>
