--- a/ChatBotApiV2/Properties/launchSettings.json
+++ b/ChatBotApiV2/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7111;http://localhost:5121",
+      "applicationUrl": "https://localhost:7011",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
