--- a/ChatBotApiV2/ChatBotApiV2.csproj
+++ b/ChatBotApiV2/ChatBotApiV2.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
+    <PackageReference Include="OllamaSharp" Version="5.4.11" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
