--- a/ClbNegChatbot/ClbNegChatbot.csproj
+++ b/ClbNegChatbot/ClbNegChatbot.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="OllamaSharp" Version="5.4.11" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.9" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ClbDatChatbot\ClbDatChatbot.csproj" />
     <ProjectReference Include="..\ClbModChatbot\ClbModChatbot.csproj" />
   </ItemGroup>
